updated file names

--- a/05 - nested modules/04 - circular dependencies/index.html
+++ b/05 - nested modules/04 - circular dependencies/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>Exporting multiple functions with a default</title>
+		<title>Circular Dependencies</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<style type="text/css">
