--- a/07 - module bundlers/03 - adding a banner/index.html
+++ b/07 - module bundlers/03 - adding a banner/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>Exporting imports as a default</title>
+		<title>Adding a Banner</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 
