--- a/01 - the basic syntax/03 - the import operator/index.html
+++ b/01 - the basic syntax/03 - the import operator/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>Renaming Imports</title>
+		<title>The Import Operator</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<style type="text/css">
