--- a/03 - renaming imports and exports/02 - renaming exports/index.html
+++ b/03 - renaming imports and exports/02 - renaming exports/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>Default Export</title>
+		<title>Renaming Exports</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<style type="text/css">
